# payload_extract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  go.mod  go.sum  payload.go  payload_test.go  range_test.go  reader.go  reader_test.go  urlrangereader.go  zippayloadreader.go
.github/workflows/: build-all.yml
cmd/: main.go
protos/: update_metadata.proto
update_engine/: update_metadata.pb.go
update_metadata/: update_metadata.pb.go
